# avox

./: .gitignore  Cargo.toml  MILESTONE1_SUMMARY.md  README.md  dfx.json
scripts/: deploy_icrc1_ledger.sh  generate_did.sh  test_flow.sh
src/avox_backend/: Cargo.toml  avox_backend.did
src/avox_backend/src/: escrow.rs  lib.rs  state.rs  types.rs
