[package]
name = "avox_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10.4"
ic-cdk = "0.17.2"
ic-cdk-macros = "0.18.2"
ic-stable-structures = "0.6.8"
serde = { version = "1.0.219", features = ["derive"] }
hex = "0.4.3"
sha2 = "0.10.8"

[dev-dependencies]
pocket-ic = "9.0.1"
tokio = { version = "1.45.1", features = ["full"] }
